--- a/cheat_sheet.tex
+++ b/cheat_sheet.tex
@@ -157,7 +157,7 @@ Use Union Find for Step \#2. Complexity $m \log n$, where $m$ is the number of e
 \subsection{Van emde Boas Trees}
 
 Van emde Boas Trees - Does everything in $O(\log w)$ or $O(\log \log N)$ time,
-where $w = 2^N$, so $logw = loglogN$. N is range.
+where $N = 2^w$, so $logw = loglogN$. N is range.
 
 Fusion Trees - Do everything in $O(\log_{w}{n})$ time or $O(\frac{\log{n}}{\log{w}})$ time.
 
