--- a/cheat_sheet.tex
+++ b/cheat_sheet.tex
@@ -1,8 +1,8 @@
-\documentclass[10pt,twocolumn]{article}
+\documentclass[9pt,twocolumn]{article}
 \usepackage{url,graphicx,tabularx,array,amsmath}
 \usepackage{enumitem}
 \setlist{nolistsep} %-- don't have lists take up shitloads of room
-\setlength{\parskip}{1ex} %--skip lines between paragraphs
+\setlength{\parskip}{0ex} %--skip lines between paragraphs
 \setlength{\parindent}{0pt} %--don't indent paragraphs
 \usepackage[
 top    = 0.75cm,
@@ -195,6 +195,34 @@ Let's assume that we have a vertex cover $V$ in the graph $G$ of size $k$. This 
 Let's consider the set $V' = G - V$. No two nodes in $V'$ have an edge between them, because if an edge was between two nodes $u$ and $v$, then one of $u$ and $v$ would be in $V$.\\
 This means that $V'$ is a independent set of length $n-k$.\\
 Hence, if we can solve the Vertex Cover problem in polynomial time, we can solve the k-independent set problem is polynomial time as well.
+
+\section{ Identities }
+Basic identities.
+\subsection{ Log Rules }
+\begin{enumerate}
+    \item $a = b^c <=> log_c(b)$
+    \item $a = b^{log_b(a)}$
+    \item $log(a b) = log(a) + log(b)$
+    \item $log_b(a) = log(a)/log(b)$
+    \item $log_b(1/a) = -log_b(a)$
+    \item $a^{log_b(c)} = c^{log_b(a)}$
+    \end{enumerate}
+\subsection{ Summation Rules}
+\begin{enumerate}
+    \item $\sum_{i = 1}^n i = 1/2(k(k+1))$
+    \item $\sum_{i = 1}^n i^2 = 1/6(k(k+1)(2k+1))$
+    \item $\sum_{i = 1}^n i^3 = 1/4(n^2 (n+1)^2))$
+    \item $\sum_{i = 1}^n i * 2^i = (k-1) * 2^{k+1} + 2$
+    \item $\sum_{i = 1}^n 2^i = 2^{n+1}-1$
+\end{enumerate}
+\subsection{Differentiation}
+\begin{enumerate}
+    \item $(log_bx)' => \frac{1}{xlnb}$
+    \item $(a^x)' => lna*a^x$
+    \item $(\frac{f(x)}{g(x)})' => \frac{g(x)*f'(x)-f(x)*g'(x)}{(g(x))^2}$
+    \item $(f(g(x)))' => f'(g(x))*g'(x)$
+    \item $(lnx)' => \frac{1}{x}$
+\end{enumerate}
 
 \section{ Min Degree Spanning Tree }
 \subsection{Modifying the problem into a decision problem}
